# chonkify

./: Cargo.toml  Dockerfile  README.md  build.sh  commit-push.sh  deploy.sh  push.sh  service.yaml  start.sh  stop.sh  superdeploy.sh
src/: main.rs
